# MFT-Website

./: about.markdown  index.html  mft_debilski_de.cabal  site.hs
css/: styles.css
scss/: styles.scss
templates/: default.html
