name:	mft-debilski-de
version: 0.1
build-type: Simple
cabal-version: >=1.20

executable site
  main-is:	site.hs
  default-language: Haskell2010
  build-depends: base
               , containers
               , bytestring >= 0.10.4.0
               , process
               , hakyll >=4.5
               , pandoc
               , pandoc-types

